add new icon in sprite, sisi-dev cta block + new utils

--- a/assets/img/stack/sprite.stack.html
+++ b/assets/img/stack/sprite.stack.html
@@ -106,7 +106,10 @@ They might well be outsourced to an external stylesheet of course.
 
 <style>
  .svg-en-dims { width: 22px; height: 16px; }
+ .svg-laravel-logo-dims { width: 156px; height: 36px; }
+ .svg-sisi-dev-logo-dims { width: 114px; height: 48px; }
  .svg-uk-dims { width: 22px; height: 16px; }
+ .svg-wordpres-logo-dims { width: 152px; height: 35px; }
 </style>
 
 <!--
@@ -141,11 +144,29 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>en, </h2>
                 </li>
+             <li title="laravel-logo">
+                    <div class="icon-box">
+                        <img src="sprite.svg#laravel-logo" class="svg-laravel-logo-dims" alt="laravel-logo">
+                    </div>
+                    <h2>laravel-logo, </h2>
+                </li>
+             <li title="sisi-dev-logo">
+                    <div class="icon-box">
+                        <img src="sprite.svg#sisi-dev-logo" class="svg-sisi-dev-logo-dims" alt="sisi-dev-logo">
+                    </div>
+                    <h2>sisi-dev-logo, </h2>
+                </li>
              <li title="uk">
                     <div class="icon-box">
                         <img src="sprite.svg#uk" class="svg-uk-dims" alt="uk">
                     </div>
                     <h2>uk, </h2>
+                </li>
+             <li title="wordpres-logo">
+                    <div class="icon-box">
+                        <img src="sprite.svg#wordpres-logo" class="svg-wordpres-logo-dims" alt="wordpres-logo">
+                    </div>
+                    <h2>wordpres-logo, </h2>
                 </li>
          </ul>
 
@@ -155,7 +176,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Wed, 19 Mar 2025 14:26:24 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Mon, 07 Apr 2025 14:00:32 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
